--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<h1>sharaball-dl</h1>
 	<img src="/Capture.png">
 	<p>Принципиально новая программа для скачивания ресурсных файлов Шарарама</p>
-	<a href="/dist.7z">Скачать</a>
+	<a href="/dist.zip">Скачать</a>
 	<p>by Goblin, 2019</p>
 </body>
 </html>
