--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 	<p>Принципиально новая программа для скачивания ресурсных файлов Шарарама</p>
 	<a href="/dist.zip">Скачать</a>
 	<p>by Goblin, 2019</p>
+	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138342119-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-138342119-1');
+</script>
+
 </body>
 </html>
