--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<h1>sharaball-dl</h1>
-	<img src="/Capture.png">
+	<img src="/Capture.PNG">
 	<p>Принципиально новая программа для скачивания ресурсных файлов Шарарама</p>
 	<a href="/dist.zip">Скачать</a>
 	<p>by Goblin, 2019</p>
