--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<img src="/Capture.PNG">
 	<p>Принципиально новая программа для скачивания ресурсных файлов Шарарама</p>
 	<a href="/dist.zip">Скачать</a>
-	<p>by Goblin, 2019</p>
+	<p>by Дмитрий "Goblin" Пучков, 2019</p>
 	
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138342119-1"></script>
